--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <!-- !Glide.js Css CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
   <title>E-Commerce | Home</title>
+
+  <!-- Adobe Tracking Script -->
+  <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
+  
 </head>
 
 <body>
