--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
     <!-- !bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/main.css" />
+
+    <!-- Adobe Tracking Script -->
+    <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
     <title>E-Commerce | Contact</title>
 </head>
 
