--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,10 @@
   <!-- !Glide.js Css CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
   <link rel="stylesheet" href="css/main.css" />
+  
+  <!-- Adobe Tracking Script -->
+  <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
+  
   <title>E-Commerce | Home</title>
 </head>
 
