--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
         <h2>New Season Sale</h2>
         <strong>40% OFF</strong>
         <span></span>
-        <a href="#" class="btn btn-lg">
+        <a href="#New-Season-Sale" class="btn btn-lg">
           SHOP NOW
           <i class="bi bi-arrow-right"></i>
         </a>
