--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <!-- Adobe Tracking Script -->
   <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
   
+
+  <script>
+    // Initalising data layer
+    window.digitalData = window.digitalData || {};
+
+  </script>
 </head>
 
 <body>
