event added to data layer

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             page: {
               pageName: "Homepage",
             },
-            event: "Homepage category items click",
             categoryTitle
-          }
+          },
+          event: "homepageCategoryClick",
         }
       }
     }
