--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           event: "homepageCategoryClick",
         }
       }
+
+      // Dispatch custom event
+      window.dispatchEvent(new CustomEvent("homepageCategoryClick"));
     }
 
 
