--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     // Initalising data layer
     window.digitalData = window.digitalData || {};
 
+    // event listeners
+    document.addEventListener('DOMContentLoaded', function() {
+      document.getElementById('newsletter-form').addEventListener('submit', newsletterSubmit);
+    })
+
     function categorySelection(){
       let clickedItem = event.target;
 
@@ -55,7 +60,6 @@
 
     function newsletterSubmit(e){
       e.preventDefault()
-
       const emailInput = document.getElementById('newsletter-input').value.trim()
       if(emailInput == ''){
         return
@@ -241,7 +245,7 @@
   <!-- ! modal dialog start -->
   <div class="modal-dialog" id="modal-dialog">
     <div class="modal-content">
-      <div class="modal-close" onclick=modalClose()>
+      <div class="modal-close">
         <i class="bi bi-x"></i>
       </div>
       <div class="modal-image">
@@ -255,7 +259,7 @@
           <p class="popup-text">
             Sign up to our newsletter and get exclusive deals you won find any where else straight to your inbox!
           </p>
-          <form class="popup-form" onsubmit=newsletterSubmit(e)>
+          <form class="popup-form" id="newsletter-form">
             <input type="text" placeholder="Enter Email Address Here" id="newsletter-input">
             <button class="btn btn-primary">SUBSCRIBE</button>
             <label>
