changed html content. restructed code added close event

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             Sign up to our newsletter and get exclusive deals you won find any where else straight to your inbox!
           </p>
           <form class="popup-form" id="newsletter-form">
-            <input type="text" placeholder="Enter Email Address Here" id="newsletter-input">
+            <input type="email" placeholder="Enter Email Address Here" id="newsletter-input">
             <button class="btn btn-primary">SUBSCRIBE</button>
             <label>
               <input type="checkbox">
@@ -783,7 +783,7 @@
               </div>
               <div class="footer-subscribe-bottom">
                 <form id="footer-newsletter-form">
-                  <input type="text" placeholder="enter your email address" id="footer-newsletter-input"/>
+                  <input type="email" placeholder="enter your email address" id="footer-newsletter-input"/>
                   <button class="btn">Subscribe</button>
                 </form>
                 <p class="privacy-text">
