--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         data: {
             page: {
               pageName: "Homepage",
-              subSection: "Newsletter"
+              subSection: "Modal"
             },
             emailInput
           },
