--- a/single-product.html
+++ b/single-product.html
@@ -8,12 +8,112 @@
     <title>E-Commerce | Product</title>
 
     <!-- Adobe Tracking Script -->
-    <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
+    <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js"
+        async></script>
     <!-- !bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <!-- !Glide.js Css CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
     <link rel="stylesheet" href="css/main.css" />
+
+    <script>
+        // Initalising data layer
+        window.digitalData = window.digitalData || {};
+
+        document.addEventListener('DOMContentLoaded', function () {
+            // event listeners
+            document.getElementById('add-to-cart').addEventListener("click", addToCart)
+
+            // functions
+            colourCheckboxSelection()
+            sizeSelection()
+        })
+
+        function colourCheckboxSelection() {
+            const colorLabels = document.querySelectorAll('.color-wrapper label');
+
+            colorLabels.forEach(label => {
+                label.addEventListener('click', () => {
+                    // Remove 'active' from all labels
+                    colorLabels.forEach(l => l.classList.remove('active'));
+
+                    // Add 'active' to clicked label
+                    label.classList.add('active');
+
+                    // Also manually set the corresponding input as checked for accessibility
+                    const input = label.querySelector('input[type="radio"]');
+                    if (input) {
+                        input.checked = true;
+                    }
+
+                    // Get selected color class or data attribute
+                    const selectedColor = label.className; 
+                });
+            });
+        }
+
+        function sizeSelection(){
+            const sizeOptions = document.querySelectorAll('.values-list span');
+            sizeOptions.forEach(span => {
+                span.addEventListener('click', () => {
+                    // Remove 'selected' from all
+                    sizeOptions.forEach(s => s.classList.remove('selected'));
+                    
+                    // Add 'selected' to the clicked one
+                    span.classList.add('selected');
+
+                    // Get the selected value
+                    const selectedSize = span.textContent.trim();
+                });
+            });
+        }
+
+        function addToCart() {
+            const productTitle = document.querySelector('.product-title').textContent
+            const oldProductPrice = document.querySelector('.old-price').textContent
+            const newProductPrice = document.querySelector('.new-price').textContent
+            const productDescription = document.querySelector('.product-description').textContent
+
+            const productSku = document.querySelector('.product-sku a').textContent;
+            const categories = document.querySelector('.product-categories a').textContent;
+            const tags = document.querySelector('.product-tags a').textContent;
+            
+            // Get selected color
+            const activeColorWrapper = document.querySelector('.color-wrapper.active');
+            const selectedColor = activeColorWrapper 
+                ? activeColorWrapper.querySelector('label').className.split('-')[0]
+                : null;
+
+            // Get selected size
+            const selectedSizeSpan = document.querySelector('.values-list span.selected');
+            const selectedSize = selectedSizeSpan ? selectedSizeSpan.textContent.trim() : null;
+
+            const quantityInput = document.querySelector('#quantity');
+            const quantity = quantityInput.value ?? null
+
+            window.digitalData = {
+                data: {
+                    page: {
+                        pageName: "Product Page",
+                        subSection: "Add to Cart"
+                    },
+                    product: {
+                        productSku,
+                        productTitle,
+                        productDescription,
+                        oldProductPrice,
+                        newProductPrice,
+                        color: selectedColor,
+                        size: selectedSize,
+                        quantity,
+                        categories,
+                        tags
+                    }
+                },
+                event: "addToCartClick"
+            }
+        }
+    </script>
 
 </head>
 
