event dispatched in product page

--- a/single-product.html
+++ b/single-product.html
@@ -113,6 +113,8 @@
                 event: "addToCartClick"
             }
         }
+
+        window.dispatchEvent(new CustomEvent("addToCartClick"));
     </script>
 
 </head>
