product data load event created

--- a/single-product.html
+++ b/single-product.html
@@ -63,6 +63,8 @@
                 },
                 event: "productPageLoad"
             }
+
+            window.dispatchEvent(new CustomEvent("productPageLoad"))
         }
 
         function colourCheckboxSelection() {
