osano script added

--- a/single-product.html
+++ b/single-product.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce | Product</title>
 
+    <!-- Osano Script -->
+    <script src="https://cmp.osano.com/tOd7P8eglh/f5b96b81-e1cf-45a0-ac3d-7ef1ac3f69f4/osano.js"></script>
+
     <!-- Adobe Tracking Script -->
     <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js"
         async></script>
