--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.min.css" />
   <title>E-Commerce | Home</title>
 
+  <!-- Osano Script -->
+  <script src="https://cmp.osano.com/tOd7P8eglh/f5b96b81-e1cf-45a0-ac3d-7ef1ac3f69f4/osano.js"></script>
+
   <!-- Adobe Tracking Script -->
   <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
   
