--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Osano Script -->
+  <script src="https://cmp.osano.com/tOd7P8eglh/f5b96b81-e1cf-45a0-ac3d-7ef1ac3f69f4/osano.js"></script>
+
   <!-- !bootstrap icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
   <!-- !Glide.js Css CDN -->
