added personalization script

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <!-- Adobe Tracking Script -->
   <script src="https://assets.adobedtm.com/8459819b208c/544aaa788b59/launch-40a7a1820485-development.min.js" async></script>
   
-
+   <!-- Scripts for tracking through osano -->
+  <script src="https://personalization-script.com/1234/1234" ></script>
   <script>
     // Initalising data layer
     window.digitalData = window.digitalData || {};
