--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   
    <!-- Scripts for tracking through osano -->
   <script src="https://personalization-script.com/1234/1234" ></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css/test"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js/test"></script>
   
   <script>
     // Initalising data layer
